--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -7,7 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     android:fillViewport="true"
-    tools:showIn="@layout/fragment_browse">
+   >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,11 +22,29 @@
             android:orientation="vertical"
             android:background="#ffffff">
 
-            <ImageView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/mb3_4coveriso"
-                android:adjustViewBounds="true" />
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/mb3_4coveriso"
+                    android:adjustViewBounds="true" />
+                <TextView
+                    android:id="@+id/bookName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:text="Book 1"
+                    android:background="@color/colorAccent"
+                    android:layout_marginTop="221dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:layout_alignParentBottom="true"
+                    />
+            </RelativeLayout>
+
+
+
 
             <TextView
                 android:id="@+id/primary1"
@@ -61,11 +79,25 @@
             android:orientation="vertical"
             android:background="#ffffff">
 
-            <ImageView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/book2cover"
-                android:adjustViewBounds="true" />
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/book2cover"
+                    android:adjustViewBounds="true" />
+                <TextView
+                    android:id="@+id/bookName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:text="Book 2"
+                    android:background="@color/colorAccent"
+                    android:layout_marginTop="221dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:layout_alignParentBottom="true"/>
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/primary2"
@@ -101,11 +133,26 @@
             android:orientation="vertical"
             android:background="#ffffff">
 
-            <ImageView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ma3_4coveriso"
-                android:adjustViewBounds="true" />
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ma3_4coveriso"
+                    android:adjustViewBounds="true" />
+                <TextView
+                    android:id="@+id/bookName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:text="Book 3"
+                    android:background="@color/colorAccent"
+                    android:layout_marginTop="221dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:layout_alignParentBottom="true"/>
+            </RelativeLayout>
+
 
             <TextView
                 android:id="@+id/primary"
@@ -141,11 +188,25 @@
             android:orientation="vertical"
             android:background="#ffffff">
 
-            <ImageView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/insidebookcover"
-                android:adjustViewBounds="true" />
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/insidebookcover"
+                    android:adjustViewBounds="true" />
+                <TextView
+                    android:id="@+id/bookName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:text="Book 4"
+                    android:background="@color/colorAccent"
+                    android:layout_marginTop="221dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:layout_alignParentBottom="true"/>
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/primary"
@@ -181,11 +242,25 @@
             android:orientation="vertical"
             android:background="#ffffff">
 
-            <ImageView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/midynamickickcoveriso"
-                android:adjustViewBounds="true" />
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/midynamickickcoveriso"
+                    android:adjustViewBounds="true" />
+                <TextView
+                    android:id="@+id/bookName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:text="Book 5"
+                    android:background="@color/colorAccent"
+                    android:layout_marginTop="221dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:layout_alignParentBottom="true"/>
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/primary"
