--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,12 +5,12 @@
     <item
         android:id="@+id/share_settings"
         android:orderInCategory="100"
-        android:title="Share Draw"
+        android:title="@string/share_draw"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/rate_settings"
         android:orderInCategory="100"
-        android:title="Rate Draw"
+        android:title="@string/rate_draw"
         app:showAsAction="never" />
 </menu>
