--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#323b45</color>
     <color name="colorPrimaryDark">#1e1f27</color>
     <color name="colorAccent">#2f85dc</color>
-    <color name="levelOne">#4a4aeb</color>
+    <color name="levelOne">#749af1</color>
     <color name="levelTwo">#60bdb1</color>
     <color name="levelThree">#ef6067</color>
     <color name="free">#ef6067</color>
