--- a/app/src/main/res/layout-sw600dp/fragment_main.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_main.xml
@@ -14,9 +14,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
         <TextView
-            android:id="@+id/monday"
+            android:id="@+id/monday3"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="@string/new_content"
@@ -27,15 +26,15 @@
 
         <LinearLayout
             android:id="@+id/layout_1"
-            android:layout_width="match_parent"
+            android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:paddingBottom="15dp"
             android:orientation="vertical"
-            android:background="#ffffff">
+            android:background="#ffffff"
+            android:layout_gravity="center_horizontal">
 
             <ImageView
-                android:id="@+id/firstImage"
-                android:layout_width="match_parent"
+                android:layout_width="500dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/mb3_4coveriso"
                 android:adjustViewBounds="true" />
@@ -53,29 +52,14 @@
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:paddingTop="10dp"
-                    android:textColor="#3c3c3c"
-                    android:layout_weight="0.9
-                    "/>
-<!--                <com.learn.howtodraw.draw.FontA.TextAwesome
-                    android:id="@+id/ticklock1"
-                    android:layout_width="38dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:text="@string/fa_check"
-                    android:textAlignment="gravity"
-                    android:paddingTop="10dp"
-                    android:gravity="right"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="15dp"
-                    android:layout_weight="0.1"
-                    android:layout_marginRight="15dp" />-->
+                    android:textColor="#3c3c3c" />
             </LinearLayout>
 
 
 
             <TextView
                 android:id="@+id/secondary"
-                android:layout_width="wrap_content"
+                android:layout_width="500dp"
                 android:layout_height="wrap_content"
                 android:text="@string/book1heading2"
                 android:paddingLeft="15dp"
@@ -85,10 +69,11 @@
         </LinearLayout>
 
         <View
-            android:layout_width="fill_parent"
+            android:layout_width="500dp"
             android:layout_height="1dp"
             android:background="#bababa"
-            android:layout_marginBottom="20dp" />
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center_horizontal" />
 
         <LinearLayout
 
@@ -101,7 +86,7 @@
             <!-- Home Card 1 -->
             <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/home_card_1"
-                android:layout_width="160dp"
+                android:layout_width="240dp"
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="4dp"
                 android:layout_margin="10dp">
@@ -118,10 +103,8 @@
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="270dp"
+                            android:layout_height="370dp"
                             android:src="@drawable/ma3_4head17" />
-
-
 
                         <!--Level 2 60bdb1-->
                         <!--Level 3 ef6067-->
@@ -131,7 +114,7 @@
                             android:layout_height="20dp"
                             android:text="Level 3"
                             android:background="#ef6067"
-                            android:layout_marginTop="220dp"
+                            android:layout_marginTop="320dp"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
                             />
@@ -142,7 +125,7 @@
                             android:text="Free this week"
 
                             android:background="#60beef"
-                            android:layout_marginTop="245dp"
+                            android:layout_marginTop="345dp"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
                             />
@@ -154,36 +137,36 @@
                         android:layout_height="1dp"
                         android:background="#bababa" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-                    <TextView
-                        android:id="@+id/primary"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="The Head"
-                        android:paddingLeft="7dp"
-                        android:paddingTop="2dp"
-                        android:textColor="#3c3c3c"
-                        android:layout_weight="0.95"/>
+                        android:orientation="horizontal"
+                        android:weightSum="1">
+
+                        <TextView
+                            android:id="@+id/primary"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="The Head"
+                            android:paddingLeft="7dp"
+                            android:paddingTop="2dp"
+                            android:textColor="#3c3c3c"
+                            android:layout_weight="0.95"/>
 
 
-                    <com.learn.howtodraw.draw.FontA.TextAwesome
-                        android:id="@+id/ticklock2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        android:text="@string/fa_check"
-                        android:textAlignment="gravity"
-                        android:paddingTop="10dp"
-                        android:gravity="right"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="14dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_weight="0.05"/>
+                        <com.learn.howtodraw.draw.FontA.TextAwesome
+                            android:id="@+id/ticklock2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="5dp"
+                            android:text="@string/fa_check"
+                            android:textAlignment="gravity"
+                            android:paddingTop="10dp"
+                            android:gravity="right"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="14dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_weight="0.05"/>
                     </LinearLayout>
 
                 </LinearLayout>
@@ -191,7 +174,7 @@
             <!-- Home Card 2 -->
             <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/home_card_2"
-                android:layout_width="160dp"
+                android:layout_width="240dp"
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="4dp"
                 android:layout_margin="10dp">
@@ -208,7 +191,7 @@
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="270dp"
+                            android:layout_height="370dp"
                             android:src="@drawable/mi3_4torso18"/>
 
                         <TextView
@@ -216,7 +199,7 @@
                             android:layout_height="20dp"
                             android:text="Free this week"
                             android:background="#60beef"
-                            android:layout_marginTop="245dp"
+                            android:layout_marginTop="345dp"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
                             />
@@ -227,7 +210,7 @@
                             android:layout_height="20dp"
                             android:text="Level 2"
                             android:background="#60bdb1"
-                            android:layout_marginTop="220dp"
+                            android:layout_marginTop="320dp"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
                             />
@@ -237,7 +220,7 @@
                             android:layout_height="20dp"
                             android:text="New"
                             android:background="#e27cde"
-                            android:layout_marginTop="195dp"
+                            android:layout_marginTop="295dp"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
                             />
@@ -296,16 +279,17 @@
 
         <LinearLayout
             android:id="@+id/layout_4"
-            android:layout_width="match_parent"
+            android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:paddingBottom="15dp"
             android:orientation="vertical"
             android:background="#ffffff"
-            android:onClick="mario">
+            android:onClick="mario"
+            android:layout_gravity="center_horizontal">
 
             <ImageView
                 android:id="@+id/willy"
-                android:layout_width="match_parent"
+                android:layout_width="500dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/sliney"
                 android:adjustViewBounds="true" />
@@ -317,7 +301,8 @@
                 android:text="Will Sliney"
                 android:paddingLeft="15dp"
                 android:paddingTop="15dp"
-                android:textColor="#3c3c3c" />
+                android:textColor="#3c3c3c"
+                />
 
             <TextView
                 android:id="@+id/will_text"
@@ -330,47 +315,11 @@
         </LinearLayout>
 
         <View
-            android:layout_width="fill_parent"
+            android:layout_width="500dp"
             android:layout_height="1dp"
             android:background="#bababa"
-            android:layout_marginBottom="20dp" />
-
-
-  <!--      <LinearLayout
-            android:id="@+id/video"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="15dp"
-            android:orientation="vertical"
-            android:background="#ffffff"
-            android:layout_marginBottom="15dp">
-
-            <VideoView
-                android:id="@+id/myVideoA"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_centerInParent="true" />
-
-            <TextView
-                android:id="@+id/video_header"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Video"
-                android:paddingLeft="15dp"
-                android:paddingTop="15dp"
-                android:textColor="#3c3c3c" />
-
-
-
-            <TextView
-                android:id="@+id/video_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Watch this video to learn how to use 'Learn how to draw'"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:textColor="#c0b9b9" />
-        </LinearLayout>-->
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
 
