--- a/app/src/main/res/layout/grid_of_tutorials_in_book.xml
+++ b/app/src/main/res/layout/grid_of_tutorials_in_book.xml
@@ -8,8 +8,9 @@
         android:id="@+id/card_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp"
-        android:layout_margin="10dp">
+        card_view:cardCornerRadius="1dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="center_horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
