--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -13,9 +13,7 @@
         android:id="@+id/slideImage"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:src="@drawable/mi3_4figure21" />
-
-
+        android:background="#ffffff" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +32,7 @@
             android:layout_alignParentRight="true"
             android:gravity="center"
             android:paddingTop="10dp"
-            android:text="0"
+            android:text="1"
             android:textColor="@color/colorAccent" />
 
         <TextView
