--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/firstImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/mb3_4coveriso"
+                android:src="@drawable/b01isocover"
                 android:adjustViewBounds="true" />
 
             <LinearLayout
@@ -56,22 +56,7 @@
                     android:textColor="#3c3c3c"
                     android:layout_weight="0.9
                     "/>
-<!--                <com.learn.howtodraw.draw.FontA.TextAwesome
-                    android:id="@+id/ticklock1"
-                    android:layout_width="38dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:text="@string/fa_check"
-                    android:textAlignment="gravity"
-                    android:paddingTop="10dp"
-                    android:gravity="right"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="15dp"
-                    android:layout_weight="0.1"
-                    android:layout_marginRight="15dp" />-->
             </LinearLayout>
-
-
 
             <TextView
                 android:id="@+id/secondary"
