--- a/app/src/main/res/layout-sw600dp/fragment_main.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_main.xml
@@ -23,7 +23,6 @@
             android:gravity="center"
             android:layout_margin="10dp"/>
 
-
         <LinearLayout
             android:id="@+id/layout_1"
             android:layout_width="500dp"
@@ -36,7 +35,7 @@
             <ImageView
                 android:layout_width="500dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/mb3_4coveriso"
+                android:src="@drawable/book1cover"
                 android:adjustViewBounds="true" />
 
             <LinearLayout
@@ -312,6 +311,14 @@
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:textColor="#c0b9b9" />
+
+            <TextView
+                android:id="@+id/removeBook5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=""
+                android:layout_marginTop="10dp"
+                />
         </LinearLayout>
 
         <View
