--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -13,7 +13,8 @@
         android:id="@+id/slideImage"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#ffffff" />
+        android:src="@drawable/pencil"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
