--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -37,7 +37,7 @@
             android:textColor="@color/colorAccent" />
 
         <TextView
-            android:id="@+id/grid_text2"
+            android:id="@+id/slash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
